--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/mongodb": "^4.0.7",
     "bcrypt": "^6.0.0",
     "body-parser": "^1.20.2",
     "class-validator": "^0.14.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.19.0",
+    "mongoose": "^8.18.0",
     "multer": "^2.0.2"
   },
   "devDependencies": {
